2010-06-04  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.spec: Fixed. Upgrading an RPM broke the installation.

2010-06-03  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php: changed the
	source code, now check the connection to server with a socket.
	Fixes: #3004761

2010-06-03  Miguel de Dios  <miguel.dedios@artica.es>

	* general/license/pandora_info_ast_es.html:   cleaned html and fixed unclose
	html tags in source code, the eclipse warm to me.

2010-06-03  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fixed a typo mistake in SQL query.
	Fixes: #3010543

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/reporting/reporting_xml.php: sorry I lost commit the changes to
	generate the report item "event_report_group".

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* general/header.php, godmode/db/db_audit.php,
	godmode/reporting/reporting_builder.item_editor.php:  cleaned html and fixed
	unclose html tags in source code, the eclipse warm to me.

2010-06-02  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/sla_view.php, operation/agentes/datos_agente.php,
	operation/agentes/estado_ultimopaquete.php: Updated header.

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/auth/ldap.php
	include/fgraph.php
	godmode/reporting/graph_builder.php: Changed the deprecated
	function split() by explode() function for bug: 2989970

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_plugin.php: fixed, now show the
	description of plugin selected.
	
	* godmode/servers/plugin.php: added the response to ajax for query the
	report description.
	
	Fixes: #3008494

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: added the code for