@@ -99,7 +99,7 @@ if ($copy_layout) {
 		
 }
 
-$table->width = '500px';
+$table->width = '550px';
 $table->data = array ();
 $table->head = array ();
 $table->head[0] = __('Map name');
@@ -108,6 +108,8 @@ $table->head[2] = __('Items');
 $table->head[3] = __('Copy');
 $table->head[4] = __('Delete');
 $table->align = array ();
+$table->align[1] = 'center';
+$table->align[2] = 'center';
 $table->align[3] = 'center';
 $table->align[4] = 'center';
 
@@ -120,8 +122,7 @@ if (!$maps) {
 			$data = array ();
 			$data[0] = '<a href="index.php?sec=gmap&sec2=godmode/reporting/visual_console_builder&tab=data&amp;action=edit&amp;id_visual_console='.$map['id'].'">'.$map['name'].'</a>';
 		
-			$data[1] = print_group_icon ($map['id_group'], true).'&nbsp;';
-			$data[1] .= get_group_name ($map['id_group'], true);
+			$data[1] = print_group_icon ($map['id_group'], true);
 			$data[2] = get_db_sql ("SELECT COUNT(*) FROM tlayout_data WHERE id_layout = ".$map['id']);
 		
 			$data[3] = '<a href="index.php?sec=gmap&amp;sec2=godmode/reporting/map_builder&amp;id_layout='.$map['id'].'&amp;copy_layout=1">'.print_image ("images/copy.png", true).'</a>';
@@ -131,8 +132,12 @@ if (!$maps) {
 	}
 	print_table ($table);
 }
-
-echo '<div class="action-buttons" style="width: '.$table->width.'">';
+if (!$maps) {
+	echo '<div class="action-buttons" style="width: 0px;">';
+}
+else {
+	echo '<div class="action-buttons" style="width: '.$table->width.'">';
+}
 echo '<form action="index.php?sec=gmap&amp;sec2=godmode/reporting/visual_console_builder" method="post">';
 print_input_hidden ('edit_layout', 1);
 print_submit_button (__('Create'), '', false, 'class="sub next"');
